# kabu_magi_mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_REVIEW.md  README.md  REVIEW_SUMMARY.md  copilot-instructions.md  docker-compose.yml  fix-pydantic-v2-env-alias.bundle  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/prompts/: kiro-spec-design.prompt.md  kiro-spec-tasks.prompt.md  kiro-steering-custom.prompt.md  kiro-steering.prompt.md
.github/workflows/: ci-self-hosted.yml  integration-foundry.yml
.kiro/specs/: tasks.md
.kiro/specs/stock-magi-system-ja/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: mcp_servers.json
docs/: CONTEXT.md  MVP_SETUP.md  TESTING.md  jquants_mcp.md
docs/mocks/: morningstar-mock-design.md
infra/runner/: README.md  docker-compose.yml  register-runner.sh  runner.service
infra/runner/docker/: Dockerfile  entrypoint.sh
sample/: client.py
scripts/: demo_consensus.py  full-tests.sh  smoke-tests.sh
src/: main.py
src/agents/: __init__.py
src/common/: __init__.py
src/common/consensus/: __init__.py
src/common/consensus/orchestrators/: __init__.py  group_chat_consensus.py
src/common/mcp/: __init__.py  foundry_tool_registry.py
src/common/models/: __init__.py  decision_models.py
src/mcp_providers/: jquants_mcp.py
src/stock_magi/: __init__.py
src/stock_magi/agents/: __init__.py  melchior_agent.py
src/stock_magi/api/: __init__.py  endpoints.py
src/stock_magi/prompts/: __init__.py  stock_analysis_prompts.py
tests/: conftest.py  test_api_endpoints.py  test_consensus_orchestrator.py  test_decision_models.py  test_e2e_foundry_integration.py  test_foundry_tool_registry.py  test_integration_foundry_live.py  test_melchior_agent.py  test_morningstar_mock.py
